[gd_scene load_steps=3 format=3 uid="uid://6bf4kdiplhyf"]

[ext_resource type="Script" path="res://ui/splash_text/splash_text.gd" id="1_a0okv"]
[ext_resource type="Theme" uid="uid://cnr6crv48q5e2" path="res://ui/splash_text/splash_text.tres" id="2_qfcy0"]

[node name="SplashText" type="Node2D"]
modulate = Color(1, 1, 1, 0.8)
texture_filter = 1
script = ExtResource("1_a0okv")

[node name="DurationTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="ExitTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(240, 24)
offset_left = -120.0
offset_top = -12.0
offset_right = 120.0
offset_bottom = 12.0
theme = ExtResource("2_qfcy0")
bbcode_enabled = true
text = "[center]SPLASH TEXT[/center]"
fit_content = true
scroll_active = false

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="ExitTimer" to="." method="_on_exit_timer_timeout"]
